[gd_scene load_steps=4 format=2]

[ext_resource path="res://png/Objects/mashineDoor.png" type="Texture" id=1]
[ext_resource path="res://src/ItemHolder.gd" type="Script" id=2]
[ext_resource path="res://objects/AttachPointActive.tscn" type="PackedScene" id=3]

[node name="ItemHolder" type="Node2D"]
script = ExtResource( 2 )

[node name="mashineDoor" type="Sprite" parent="."]
position = Vector2( -2.52057e-14, -3.54739 )
rotation = 3.14159
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="AttachPointActive" parent="." instance=ExtResource( 3 )]
position = Vector2( -2.44242e-05, -9.44139 )
[connection signal="attached" from="AttachPointActive" to="." method="_on_attached"]
[connection signal="detached" from="AttachPointActive" to="." method="_on_detached"]
